MDEV-24476 Overloaded functions dbug_print_rec break compilation in 10.3

dbug_print_rec() functions used to print data inside GDB.